RESOLVED FIXED35710
[chromium] DateExtension fires incorrectly
https://bugs.webkit.org/show_bug.cgi?id=35710
Summary [chromium] DateExtension fires incorrectly
John Abd-El-Malek
Reported 2010-03-03 17:04:44 PST
Full background here: http://code.google.com/p/chromium/issues/detail?id=33441#makechanges The problem was this line: argv[0] = v8::String::New(allow ? "false" : "true"); since the JS function did "if (enable)" and treated the string as bool, it was always true.
Attachments
Proposed patch (2.95 KB, patch)
2010-03-03 17:11 PST, John Abd-El-Malek
no flags
John Abd-El-Malek
Comment 1 2010-03-03 17:11:47 PST
Created attachment 49965 [details] Proposed patch
Adam Barth
Comment 2 2010-03-03 17:23:39 PST
Comment on attachment 49965 [details] Proposed patch Type FTW
John Abd-El-Malek
Comment 3 2010-03-03 17:31:52 PST
Thanks for the quick review!
WebKit Commit Bot
Comment 4 2010-03-04 01:24:52 PST
Comment on attachment 49965 [details] Proposed patch Clearing flags on attachment: 49965 Committed r55513: <http://trac.webkit.org/changeset/55513>
WebKit Commit Bot
Comment 5 2010-03-04 01:24:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.