2010-03-04  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Adam Barth.

        Fix incorrect setup of DateExtension.
        https://bugs.webkit.org/show_bug.cgi?id=35710

        * fast/dom/Window/resources/slow_unload_handler1.html:
2010-03-04  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Adam Barth.

        Fix incorrect setup of DateExtension.
        https://bugs.webkit.org/show_bug.cgi?id=35710

        * bindings/v8/DateExtension.cpp:
        (WebCore::DateExtension::setAllowSleep):

Canonical link: https://commits.webkit.org/46810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55513 268f45cc-cd09-0410-ab3c-d52691b4dbfc